--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                 <button class="service__button">Ремонтируемые бренды</button>
               </li>
               <li class="services__item serivce">
-                <button class="service__button service__button-active">
+                <button class="service__button service__button--active">
                   Ремонтируемые устройства
                 </button>
               </li>
