--- a/index.html
+++ b/index.html
@@ -20,22 +20,24 @@
           <div class="container">
             <div class="header__bar">
               <div class="header__content">
-                <button class="header__burger burger">
-                  <img
-                    class="burger__img"
-                    src="./images/svgs/burger.svg"
-                    alt="Бургер меню"
-                  />
-                </button>
-                <div class="header__logo logo">
-                  <a class="logo__link" href="#"
-                    ><img
-                      class="logo__img"
-                      src="./images/svgs/logo.svg"
-                      alt="Logo"
-                  /></a>
+                <div class="header__left">
+                  <button class="header__burger burger">
+                    <img
+                      class="burger__img"
+                      src="./images/svgs/burger.svg"
+                      alt="Бургер меню"
+                    />
+                  </button>
+                  <div class="header__logo logo">
+                    <a class="logo__link" href="#"
+                      ><img
+                        class="logo__img"
+                        src="./images/svgs/logo.svg"
+                        alt="Logo"
+                    /></a>
+                  </div>
                 </div>
-                <div class="header__menu menu">
+                <div class="header__right menu">
                   <ul class="menu__list">
                     <li class="menu__item">
                       <button class="menu__button menu-button">
