--- a/index.html
+++ b/index.html
@@ -20,53 +20,55 @@
           <div class="container">
             <div class="header__bar">
               <div class="header__content">
-                <div class="header__left">
-                  <button class="header__burger burger">
-                    <img
-                      class="burger__img"
-                      src="./images/svgs/burger.svg"
-                      alt="Бургер меню"
-                    />
-                  </button>
-                  <div class="header__logo logo">
-                    <a class="logo__link" href="#"
-                      ><img
-                        class="logo__img"
-                        src="./images/svgs/logo.svg"
-                        alt="Logo"
-                    /></a>
+                <div class="header__mobile-menu mobile-menu">
+                  <div class="header__left">
+                    <button class="header__burger burger">
+                      <img
+                        class="burger__img"
+                        src="./images/svgs/burger.svg"
+                        alt="Бургер меню"
+                      />
+                    </button>
+                    <div class="header__logo logo">
+                      <a class="logo__link" href="#"
+                        ><img
+                          class="logo__img"
+                          src="./images/svgs/logo.svg"
+                          alt="Logo"
+                      /></a>
+                    </div>
                   </div>
-                </div>
-                <div class="header__right menu">
-                  <ul class="menu__list">
-                    <li class="menu__item">
-                      <button class="menu__button menu-button">
-                        <img
-                          class="menu-button__img"
-                          src="./images/svgs/call.svg"
-                          alt="Звонок"
-                        />
-                      </button>
-                    </li>
-                    <li class="menu__item">
-                      <button class="menu__button menu-button">
-                        <img
-                          class="menu-button__img"
-                          src="./images/svgs/chat.svg"
-                          alt="Чат"
-                        />
-                      </button>
-                    </li>
-                    <li class="menu__item">
-                      <button class="menu__button menu-button">
-                        <img
-                          class="menu-button__img"
-                          src="./images/svgs/profile.svg"
-                          alt="Профиль"
-                        />
-                      </button>
-                    </li>
-                  </ul>
+                  <div class="header__right menu">
+                    <ul class="menu__list">
+                      <li class="menu__item">
+                        <button class="menu__button menu-button">
+                          <img
+                            class="menu-button__img"
+                            src="./images/svgs/call.svg"
+                            alt="Звонок"
+                          />
+                        </button>
+                      </li>
+                      <li class="menu__item">
+                        <button class="menu__button menu-button">
+                          <img
+                            class="menu-button__img"
+                            src="./images/svgs/chat.svg"
+                            alt="Чат"
+                          />
+                        </button>
+                      </li>
+                      <li class="menu__item">
+                        <button class="menu__button menu-button">
+                          <img
+                            class="menu-button__img"
+                            src="./images/svgs/profile.svg"
+                            alt="Профиль"
+                          />
+                        </button>
+                      </li>
+                    </ul>
+                  </div>
                 </div>
               </div>
               <div class="header__info info">
